--- a/pages/index.css
+++ b/pages/index.css
@@ -44,3 +44,40 @@
   text-decoration: none;
   color: black;
 }
+
+.join {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+}
+
+.join input {
+  width: 200px;
+  height: 25px;
+}
+
+.join div {
+  width: 105px;
+  text-align: right;
+  margin: 0 10px 0 0;
+}
+
+.logo {
+  text-decoration: none;
+  color: black;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+}
